--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,33 +11,38 @@
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, id: "flash_#{name}" %>
     <% end %>
-    <div id="user_nav">
       <% if current_user %>
-        Logged in as <strong><%= current_user.email %></strong>.
-        <%= link_to "Logout", logout_path %>
+        <div id="logout">
+          Logged in as <strong><%= current_user.email %></strong>.
+          <%= link_to "Logout", logout_path %>
+        </div>
       <% else %>
 
-        <%= form_for @user, method: :post do |f| %>
-          <%= f.email_field :email, :placeholder => 'email..' %>
+        <div id="user_nave">
+          <%= form_for @user, method: :post do |f| %>
+            <%= f.email_field :email, :placeholder => 'email..' %>
 
-          <%= f.password_field :password, :placeholder => 'password..' %>
+            <%= f.password_field :password, :placeholder => 'password..' %>
 
-          <%= f.password_field :password_confirmation, :placeholder => 'confirm your password' %>
+            <%= f.password_field :password_confirmation, :placeholder => 'confirm your password' %>
 
-          <%= f.submit "Sign up" %>
-        <% end %>
+            <%= f.submit "Sign up" %>
+          <% end %>
 
-        <%= form_tag('/login') do %>
-          <%= email_field_tag :email, nil, :placeholder => 'email..' %>
+          <%= form_tag('/login') do %>
 
-          <%= password_field_tag :password, nil, :placeholder => 'password..' %>
+              <%= email_field_tag :email, nil, :placeholder => 'email..' %>
 
-          <%= submit_tag "Check your bling" %>
-        <% end %>
+              <%= password_field_tag :password, nil, :placeholder => 'password..' %>
+
+              <%= submit_tag "Check your bling" %>
+
+          <% end %>
+        </div>
 
       <% end %>
-      <center><h1><font color="green">Bling Bling Bank</font> <font color="gold">$$</font></h1></center>
-    </div>
+      <br />
+      <center><font color="gold"><h1>PP</h1></font><font color="#575757">  <h2>Bling Bling Bank</h2></font><h1> <font color="gold">PP <br /></font><font color="green">LLLL</font></h1></center><!--HATERS GONNA HATE-->
   </div>
 
 <%= yield %>
