--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 
       <% end %>
       <br />
-      <center><font color="gold"><h1>PP</h1></font><font color="#575757">  <h2>Bling Bling Bank</h2></font><h1> <font color="gold">PP <br /></font><font color="green">LLLL</font></h1></center><!--HATERS GONNA HATE-->
+      <center><font color="gold" class="blink"><h1>PP</h1></font><font color="#575757">  <h2>Bling Bling Bank</h2></font><h1> <font color="gold" class="blink">PP</font><br/><font color="green">LLLL</font></h1></center><!--HATERS GONNA HATE-->
   </div>
 
 <%= yield %>
